Change sidebar link text from 'stackboard' to 'retana'

--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@ padding:10px;
     <div class="sidebar-content">
       <div class="sidebar-brand">
        <i class="fa fa-th"></i> 
-        <a href="/demov6" style= "color: white; text-transform: lowercase;">stackboard</a>
+        <a href="/demov6" style= "color: white; text-transform: lowercase;">retana</a>
         
         <div id="close-sidebar">
           <i class="fa fa-times"></i>
