Change sidebar link and navbar title to 'retana'

--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@ padding:10px;
     <div class="sidebar-content">
       <div class="sidebar-brand">
        <i class="fa fa-th"></i> 
-        <a href="/demov6" style= "color: white; text-transform: lowercase;">retana</a>
+        <a href="#" style= "color: white; text-transform: lowercase;">retana</a>
         
         <div id="close-sidebar">
           <i class="fa fa-times"></i>
@@ -1708,7 +1708,7 @@ padding:10px;
   <a class="navbar-brand" href="#">
   
  
-  <h3><i class="fa fa-th"></i> stackboard</h3></a>
+  <h3><i class="fa fa-th"></i> retana</h3></a>
   
 
 
