Update link for adding an app in index.html

--- a/index.html
+++ b/index.html
@@ -3117,7 +3117,7 @@ function loadSections() {
      <h4>You've created your first stack!</h4>
   Add an app to start building out your stack.
   <br>
-  <a href="/demov6/add/?sectionId=${section.id}" class="btn btn-success" role="button">Add app</a>
+  <a href="/add/?sectionId=${section.id}" class="btn btn-success" role="button">Add app</a>
   </div>
     
       </div>
