Update project link in sidebar menu

--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@ padding:10px;
               <ul>
                 <li>
 			
-                  <a href="/demov6/projects" target="_blank">+ New project</a>
+                  <a href="/projects" target="_blank">+ New project</a>
                 </li>
                
                 
